--- a/angular-superwars-oops/src/styles.css
+++ b/angular-superwars-oops/src/styles.css
@@ -2,20 +2,23 @@
 
 .container {
     display: grid;
-    grid-template-columns: 40% 20% 40%;
-    grid-column-gap: 3em;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-column-gap: 1em;
+    width: 80%;
+    padding-left: 8%;
 }
 
 
 /* Team */
 
 .team {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.team {
-    padding: 4rem;
+    border-style: groove;
+    border-radius: 10px;
+    box-shadow: 0px 0px 2px 2px rgba(167, 38, 241, 0.2);
+    padding: 0%;
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    /* grid-column-gap: 1em; */
     text-align: center;
 }
 
@@ -45,6 +48,8 @@
     padding: 4rem;
     font-size: 3em;
     text-align: center;
+    margin:5px;
+    
 }
 
 .footer {
